--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
              cd ..
              git clone https://github.com/catchorg/Catch2.git
-             cd Quneiform/tests
+             cd quneiform/tests
              cmake ./
              make -j4
              cd bin
