--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -51,10 +51,12 @@ if(APPLE AND NOT CMAKE_OSX_DEPLOYMENT_TARGET)
 endif()
 
 project(quneiform VERSION 2025.0.0.0 DESCRIPTION "Eclipse Quneiform")
+set(PROGRAM_LONGNAME ${quneiform_DESCRIPTION})
 set(PROGRAM_NUMBERED_VERSION 1.0)
+set(PUBLISHER "Eclipse Foundation AISBL")
 set(PROGRAM_AUTHOR "Blake Madden")
 set(PROGRAM_COMMENTS "Internationalization & localization analysis system")
-set(PROGRAM_RDNS_IDENTIFIER "org.quneiform.quneiform")
+set(PROGRAM_RDNS_IDENTIFIER "org.eclipse.quneiform")
 set(PROGRAM_LICENSE "BSD-3-Clause")
 
 if(CMAKE_COMPILER_IS_GNUCC)
@@ -87,6 +89,11 @@ message(STATUS "Published by: ${PUBLISHER}")
 message(STATUS "Homepage: ${quneiform_HOMEPAGE_URL}")
 message(STATUS "Output program file: ${CMAKE_PROJECT_NAME}")
 message(STATUS "Writing program info to build peripheral files")
+if(WIN32)
+    set(CJK_FONT "MS Gothic")
+elseif(UNIX)
+    set(CJK_FONT "Noto Serif CJK SC")
+endif()
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/resource.h.in"
                "${CMAKE_CURRENT_SOURCE_DIR}/resource.h")
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.in"
