Add Windows installer Also include Linux AppImage configure files

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@
 /docs/manual/issues/i18n-issues_files/
 /docs/manual/book/issues/i18n-issues_files/
 /docs/manual/index.ptc
+/installers/windows/icons.isl
+/installers/windows/quneiform.iss
+/installers/windows/setup.isl
+/installers/windows/output
+/installers/windows/release
