--- a/.github/workflows/macOS build.yml
+++ b/.github/workflows/macOS build.yml
@@ -1,12 +1,12 @@
 name: macOS Build
-on: [push]
+on: [push,pull_request]
 
 jobs:
   build:
     name: build
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: 'true'
       - name: build
