--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -49,7 +49,7 @@ jobs:
       # Create compile_commands.json for clang-tidy
       - name: Configure CMake compile_commands.json
         run: |
-          cmake -S src/gui -B "$BUILD_DIR" -G Ninja -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
+          cmake -S gui -B "$BUILD_DIR" -G Ninja -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
           # cmake --build "$BUILD_DIR" -j   # optional if you need generated headers
       
       - name: Collect target files (include + prune excludes)
