Detect smart quotes in Quarto files Closes #4

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -59,10 +59,11 @@ add_executable(${CMAKE_PROJECT_NAME} ../src/i18n_string_util.cpp
 ../src/csharp_i18n_review.cpp
 ../src/po_file_review.cpp
 ../src/rc_file_review.cpp
+../src/quarto_review.cpp
 ../src/translation_catalog_review.cpp
 ../src/pseudo_translate.cpp
 i18nstringtests.cpp stringutiltests.cpp cpptests.cpp csharptests.cpp
-decodetests.cpp rctests.cpp potests.cpp testingmain.cpp)
+decodetests.cpp rctests.cpp potests.cpp quartotests.cpp testingmain.cpp)
 if(MSVC)
     target_compile_definitions(${CMAKE_PROJECT_NAME} PUBLIC __UNITTEST)
     if(USE_ADDRESS_SANITIZE)
