--- a/docs/manual/_quarto.yml.in
+++ b/docs/manual/_quarto.yml.in
@@ -63,6 +63,10 @@ format:
     cite-method: biblatex
     lot: false
     code-block-bg: false
-    CJKmainfont: "${CJK_FONT}"
+    CJKmainfont: NotoSerifJP
+    CJKoptions:
+      - Path=./fonts/NotoSerifJP/
+      - Extension=.ttf
+      - UprightFont=*-VariableFontwght
     linkcolor: black
     citecolor: black
